--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
-    </form>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="form-wrapper">
+      <form class="search-form" id="search-form">
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+        <button type="submit" class="search-btn">Search
+        </button>
+      </form>
+    </div >
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
   </body>
 </html>
